pipelines/prod-hub/custom-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: backend
  namespace: workload
spec:
  host: ducks.apps.vrutkovs1.origin-gce.dev.openshift.com
  path: /kill
  to:
    kind: Service
    name: backend
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ui
  namespace: workload
spec:
  host: ducks.apps.vrutkovs1.origin-gce.dev.openshift.com
  to:
    kind: Service
    name: ui
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
